Fixed the docs so they are viewable and testable in http://localhost:1337/swagger/index.html#/ (with a user already in database)
